# mha-tsh-preservation-server

./: .gitignore  CONTRIBUTING.md  LICENSE  PROGRESS.md  PROJECT_HISTORY.md  README.md  RUNBOOK.md  allproto_readable.lua
.github/: CODEOWNERS  pull_request_template.md
analysis/: protocol_ids.csv
docs/: beginner_quest_research_2026-06-16.md  index.html  intro_video_research_2026-06-16.md  roster_research_2026-06-16.md  starter_intro_qte_stage_research_2026-06-16.md  style.css
preservation_server/: README.md  pyproject.toml
preservation_server/src/mhatsh_server/: __init__.py  __main__.py  act_daily_stages.py  activity_state.py  allsvr_stages.py  area_event_stages.py  beginner_quest.py  bootstrap.py  campaign.py  character_archive.py  character_menu.py  characters.py  combat.py  combat_action_hints.py  combat_internal_action_hints.py  drama_family_stages.py  empty_shop_stages.py  entitlements.py  game_server.py  herochip_stages.py  intro.py  lottery.py  mail.py  npc_cfg_hints.py  profile_store.py  protocol.py  relax_stages.py  roguelike_stages.py  roster.py  schema.py  secret_area_stages.py  skill_info_structured_terms.py  skill_video_paths.py  stages.py  task_cfg_hints.py  tasks.py  tutorial.py  userinfo.py  usj_stages.py  world.py  (+2 more)
preservation_server/tests/: test_bootstrap.py  test_game_server.py  test_protocol.py
scripts/: derive_act_daily_stage_hints.py  derive_allsvr_stage_hints.py  derive_area_event_stage_hints.py  derive_asset_drama_stage_hints.py  derive_battle_stage_catalog.py  derive_combat_action_hints.py  derive_drama_family_stage_hints.py  (+24 more)
(+7 files in other folders)
